[package]
name = "boltex_nif"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
publish = false

[lib]
name = "boltex_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
neo4rs = { version = "0.9.0-rc.9", features = ["unstable-v1"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
